UI: fixes line wrap in record description links
* closes #1008

--- a/invenio_opendata/base/static/css/records.css
+++ b/invenio_opendata/base/static/css/records.css
@@ -468,7 +468,6 @@
 }
 
 .rec_metadata .rec_desc a {
-  width: 100%;
   display: inline-block;
 }
 .rec_desc span {
